Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124561

Qt.labs.platform context Menu appears out of the app window on Gnome/wayland

XMLWordPrintable

    • Linux/Wayland
    • 7ffb4c169 (dev), b572a85b6 (6.8), a050a0f8c (6.7), 430953126 (tqtc/lts-6.5)

      Linux Ubuntu 22.04.4 / Wayland

      Qt Creator 13.0.0

      Steps to reproduce:

      1. Open example app - https://doc.qt.io/qt-6/qtquickcontrols-texteditor-example.html
      2. Run the app on desktop.
      3. When it's launched, right-click in the editor.
      4. Check the position of the context menu.
      5. Click anywhere in the editor 
      6. The context menu does not disappear.

       

      Expected: The context menu should be shown close to the cursor.

      Actual: The context menu appears outside the window. I cannot close it by clicking anywhere. It can be closed only after selecting anything from the menu. 

      17:20:01: Starting /home/lukasz/Qt/Examples/Qt-6.7.0/quickcontrols/texteditor/build/Desktop_Qt_6_7_0_64-Debug/texteditorexample...
      QML debugging is enabled. Only use this in a safe environment.
      QQuickPixmap: connectFinished() called when not loading.
      Gdk-Message: 17:20:18.542: Window 0x5981113838a0 is a temporary window without parent, application will not be able to position it on screen.(texteditorexample:6086): Gdk-WARNING **: 17:20:18.542: Couldn't map as window 0x5981113838a0 as popup because it doesn't have a parent
      Gdk-Message: 17:20:27.224: Window 0x5981113838a0 is a temporary window without parent, application will not be able to position it on screen.(texteditorexample:6086): Gdk-WARNING **: 17:20:27.224: Couldn't map as window 0x5981113838a0 as popup because it doesn't have a parent
      Gdk-Message: 17:20:41.936: Window 0x5981113838a0 is a temporary window without parent, application will not be able to position it on screen.(texteditorexample:6086): Gdk-WARNING **: 17:20:41.936: Couldn't map as window 0x5981113838a0 as popup because it doesn't have a parent
      Gdk-Message: 17:20:49.544: Window 0x5981113838a0 is a temporary window without parent, application will not be able to position it on screen.(texteditorexample:6086): Gdk-WARNING **: 17:20:49.544: Couldn't map as window 0x5981113838a0 as popup because it doesn't have a parent 

      Reproducibility:  100% 
       

        1. context_menu_in_text_editor.webm
          1.07 MB
          Łukasz Kosiorowski
        2. menutest.qml
          0.6 kB
          Shawn Rutledge
        3. typescript-debug-remote-gdb
          171 kB
          Shawn Rutledge
        4. screenshot-1.png
          18 kB
          Axel Spoerl
        5. gtk-example1.tgz
          1 kB
          Shawn Rutledge
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes